# py-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: Makefile  README.md  main.py  pyproject.toml
{{ cookiecutter.project_name }}/src/: app.py  logger.py
